tests/baselines/reference/parserClassDeclaration10.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration10.ts(2,4): error TS2390: Constructor implementation is missing.
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration10.ts(3,4): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration10.ts (2 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
       foo();
       ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }